<resources>
    <string name="app_name">L04-Reservation</string>
    <string name="name">Name: </string>
    <string name="number">Mobile Number: </string>
    <string name="size">Size of the group: </string>
    <string name="area">Area Type: </string>
    <string name="smoke">Smoking area</string>
    <string name="noSmoke">Non-Smoking area</string>
    <string name="blank">Enter here</string>
    <string name="submit">Reserve</string>
    <string name="reset">Reset</string>
</resources>